--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Santa Rosa California</title>
+		<title>Santa Rosa California github index</title>
         <meta name="description" content="Joe  Santa Rosa California">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -65,4 +65,5 @@
             <div style="position:fixed;bottom:0;height:auto;margin-top:40px;width:100%;opacity: 0.1;text-align:center">Santa Rosa California homepage electrical  </div>
      
 	</body>
+
 </html>
