--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                                 <!--<li><a href="javascript:AlertIt();"class="icon fa-facebook"><span class="label">Facebook</span></a></li>-->
                             </ul>
 						</nav>
-                        <p dir="auto">Pair down to the essence but don't remove the poetry. github1SEESQARED_repo </p>
+                        <p dir="auto">Pair down to the essence but don't remove the poetry. github1SEESQARED_repo indeex.html </p>
                         
 
 					</header>
@@ -67,4 +67,5 @@
 	</body>
 
 </html>
+
 
